--- a/aboutus.html
+++ b/aboutus.html
@@ -16,7 +16,7 @@
         <label for="check" class="checkbtn"><i class="bi bi-list"></i></label>
         <label class="logo"><img src="pblImages/images2-removebg-preview.png"></label>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Categories</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="#">Contact Us</a></li>            
